@@ -1,7 +1,9 @@
-# ERIANTYS
 
-# Prova Finale Ingegneria del Software 2022
-## Gruppo AM11
+# Software Engeneering Final Test 2022
+
+<img src="https://craniointernational.com/2021/wp-content/uploads/2021/06/14.jpg"/>
+
+## Group - AM11
 
 - ###   10682882    Aleksandro Aliaj ([@AleksandroAliaj](https://github.com/AleksandroAliaj))<br>aleksandro.aliaj@mail.polimi.it
 - ###   10674905    Leonardo Cesani ([@LeonardoCesani](https://github.com/LeonardoCesani))<br>leonardo.cesani@mail.polimi.it
@@ -25,13 +27,13 @@
 
 
 ## Running
-###Server
+### Server
 
 Open a terminal and go to the directory containing the jar. Once there, execute this command:
 
 *java -jar AM11_server.jar*
 
-###Client (CLI)
+### Client (CLI)
 
 Open a terminal and go to the directory containing the jar. Once there, execute this command:
 
@@ -39,15 +41,24 @@ Open a terminal and go to the directory containing the jar. Once there, execute 
 
 IP and port will be asked as the game begins
 
-###Client (GUI)
-####For Windows users
+### Client (GUI)
+#### For Windows users
 Open a terminal and go to the directory containing the jar. Once there, execute this command:
 
 *java -jar AM11_gui.jar*
 
-####For MAC users with Apple Silicon M1
+#### For MAC users
 
-1. Download javafx SDK from this [here](https://download2.gluonhq.com/openjfx/18.0.1/openjfx-18.0.1_osx-aarch64_bin-sdk.zip) and extract it to the same folder containing the GUI jar
+1. Download javafx SDK from [here](https://gluonhq.com/products/javafx/) and extract it to the same folder containing the GUI jar
+2. Open a terminal and go to the directory containing the jar. Once there, execute this command:
+
+*java --module-path <PATH_TO_LIB> --add-modules javafx.controls --add-modules javafx.fxml --add-modules javafx.media -jar AM11_gui.jar*
+
+IP and port will be asked as the game begins
+
+#### For MAC users with Apple Silicon M1
+
+1. Download javafx SDK from [here](https://download2.gluonhq.com/openjfx/18.0.1/openjfx-18.0.1_osx-aarch64_bin-sdk.zip) and extract it to the same folder containing the GUI jar
 2. Open a terminal and go to the directory containing the jar. Once there, execute this command:
 
 *java --module-path <PATH_TO_LIB> --add-modules javafx.controls --add-modules javafx.fxml --add-modules javafx.media -jar AM11_gui.jar*
@@ -64,25 +75,25 @@ IP and port will be asked as the game begins
 | controller | OrderComparator | 100% (1/1)  | 100% (1/1)    |    88% (8/9)    |
 | model      | Global Package  | 97% (38/39) | 92% (234/252) | 74% (1046/1407) |
 
-##How To Play (GUI)
-###Connection Phase
+## How To Play (GUI)
+### Connection Phase
 You will be asked to insert IP and Port of the server. If left blank the client will connect to the default values: 
 
 - IP: *"Localhost"*
 - Port: *"2063"*
 
 
-###Login Phase
+### Login Phase
 
 You will need to insert the username, select the number of players to play the game and check whether you want to play pro rules.
 
 Note that your username must be different from all the players logged in the server, not only the ones in the same lobby.
 
-###Mage Selection Phase
+### Mage Selection Phase
 
 You will need to choose the mage representing the deck you will be using during the game. 
 
-###Action Phase
+### Action Phase
 
 You can find the rules [here](https://craniointernational.com/2021/wp-content/uploads/2021/06/Eriantys_rules_small.pdf).
 
